Prevent too much jumping when loader appears when restarting game

--- a/src/components/GameRecap/style.module.scss
+++ b/src/components/GameRecap/style.module.scss
@@ -19,6 +19,15 @@
     justify-content: center;
     gap: 16px;
     margin-right: 20px;
+
+    button {
+      width: 270px;
+    }
+  }
+
+  .loaderContainer {
+    min-height: 50px;
+    width: 270px;
   }
 
   .gameRecapAnswersBox {
